[package]
name = "thingput"
version = "0.1.0"
authors = ["Frédéric Laurier-Montpetit <flmontpetit@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4.2"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-multipart = "0.2.0"